[gd_scene load_steps=3 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/ResearchPanel.gd" type="Script" id=2]

[node name="ResearchPanel" type="PanelContainer"]
visible = false
margin_right = 14.0
margin_bottom = 14.0
mouse_filter = 1
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 278.0
margin_bottom = 113.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 271.0
margin_bottom = 19.0
mouse_filter = 1
text = "Research"
align = 1

[node name="NumActionsContainer" type="HSplitContainer" parent="VBoxContainer"]
margin_top = 23.0
margin_right = 271.0
margin_bottom = 48.0
mouse_filter = 1
dragger_visibility = 1

[node name="NumActionsLabel" type="Label" parent="VBoxContainer/NumActionsContainer"]
margin_top = 3.0
margin_right = 182.0
margin_bottom = 22.0
mouse_filter = 1
text = "Number of Actions (£10)"

[node name="NumActionsButton" type="Button" parent="VBoxContainer/NumActionsContainer"]
margin_left = 194.0
margin_right = 271.0
margin_bottom = 25.0
mouse_filter = 1
text = "Increase"

[node name="TurretDamageContainer" type="HSplitContainer" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 271.0
margin_bottom = 77.0
mouse_filter = 1
dragger_visibility = 1

[node name="TurretDamageLabel" type="Label" parent="VBoxContainer/TurretDamageContainer"]
margin_top = 3.0
margin_right = 183.0
margin_bottom = 22.0
mouse_filter = 1
text = "Damage of Turrets (£20)"

[node name="TurretDamageButton" type="Button" parent="VBoxContainer/TurretDamageContainer"]
margin_left = 195.0
margin_right = 271.0
margin_bottom = 25.0
mouse_filter = 1
text = "Increase"

[node name="TurretRangeContainer" type="HSplitContainer" parent="VBoxContainer"]
margin_top = 81.0
margin_right = 271.0
margin_bottom = 106.0
mouse_filter = 1
dragger_visibility = 1

[node name="TurretRangeLabel" type="Label" parent="VBoxContainer/TurretRangeContainer"]
margin_top = 3.0
margin_right = 169.0
margin_bottom = 22.0
mouse_filter = 1
text = "Range of Turrets (£20)"

[node name="TurretRangeButton" type="Button" parent="VBoxContainer/TurretRangeContainer"]
margin_left = 181.0
margin_right = 271.0
margin_bottom = 25.0
mouse_filter = 1
text = "Increase"

[connection signal="mouse_entered" from="." to="." method="_on_ResearchPanel_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ResearchPanel_mouse_exited"]
